docs/assets/styles.css
/* ... */
body.dark-mode .footer #dmtoggle {
  transform: rotate(-45deg);
}

.footer #dmtoggle:hover {
  opacity: 1;
}

.footer #dmtoggle div {
  position: absolute;
  background: #424242;
  transition: transform .3s, background .3s;
}

body.dark-mode .footer #dmtoggle div {
  background: #f5f5f5;
}

.footer #dmtoggle .arc, .footer #dmtoggle .darc {
  width: 16px;
  height: 16px;
  border-radius: 16px;
}

body.dark-mode .footer #dmtoggle .arc {
  transform: scale(1.2);
}

.footer #dmtoggle .darc {
  background: #f5f5f5;
  transform: translateX(24px);
}

body.dark-mode .footer #dmtoggle .darc {
  transform: translateX(6px);
  background: #212121;
}

.footer #dmtoggle .ray {
  width: 6px;
  height: 2px;
  border-radius: 2px;
  margin-left: 28px;
  transform-origin: -11px 1px;
}

.footer #dmtoggle .ray.one { transform: rotate(0deg); }
.footer #dmtoggle .ray.two { transform: rotate(45deg); }
.footer #dmtoggle .ray.three { transform: rotate(90deg); }
.footer #dmtoggle .ray.four { transform: rotate(135deg); }
.footer #dmtoggle .ray.five { transform: rotate(180deg); }
.footer #dmtoggle .ray.six { transform: rotate(225deg); }
.footer #dmtoggle .ray.seven { transform: rotate(270deg); }
.footer #dmtoggle .ray.eight { transform: rotate(315deg); }

body.dark-mode .footer #dmtoggle .ray {
  transform: scaleX(0.01);
}

.footer img {
  height: 48px;
}

.footer .nav {
  height: 48px;
  position: absolute;
  left: 32px;
  text-align: center;
  cursor: pointer;
  display: flex; align-items: center; justify-content: space-between;
  flex-direction: column;
  height: 16px;
  opacity: .5;
  transition: opacity .15s;
}

.footer .nav.active, .footer .nav:hover {
  opacity: 1;
}

.footer .nav .line {
  width: 24px;
  height: 2px;
  background: #424242;
  transition: opacity .15s, transform .15s, background .3s;
  transform-origin: 16px 1px;
}

body.dark-mode .nav .line {
  background: #eeeeee;
}

.footer .nav.active .line {
  transform: rotate(45deg);
}

.footer .nav.active .line:first-child {
  transform: rotate(-45deg);
}

.footer .nav.active .line:last-child {
  opacity: 0;
}

@media screen and (max-width: 1200px) {
  .footer .nav {
    left: 12px;
  }

  .footer #dmtoggle {
    right: 12px;
  }
}

/*********** overlays ***********/

.overlay {
  position: fixed; display: flex;
  z-index: -1000; opacity: 0;
  background: rgba(0, 0, 0, .85); color: white;
  align-items: center; justify-content: center; text-align: center;
  font-size: 48px;
  left: 0; top: 0; bottom: 0; right: 0;
  user-select: none;
  transition: opacity 0s;
}

.overlay.active {
  opacity: 1; z-index: 1000; transition: opacity .15s;
}

/*********** hljs overrides ***********/

span[code] {
  background: rgba(128, 128, 128, .12);
  font-family: monospace;
  padding: 4px;
  border-radius: 3px;
}

pre[copy] {
  cursor: pointer;
  position: relative;
  overflow: hidden;
}

pre[copy]::after {
  position: absolute;
  right: 0; top: 0; height: 48px;
  content: '< click to copy';
  color: #4A90E2; border-radius: 3px;
  background: #212121;
  font-family: 'Hind', sans-serif;
  font-size: 14px; font-weight: bold;
  display: flex; justify-content: center; align-items: center;
  padding: 0 16px;
  transform: translateX(100%);
  transition: all .15s;
}

pre[copy]:hover::after {
  transform: translateX(0);
}

code .line {
  cursor: pointer;
  background: transparent;
  transition: background .15s;
  position: relative;
}

code .line:before {
  content: ' ';
  position: absolute;
  left: -10px;
  width: 2px;
  top: 0;
  bottom: 0;
  border-left: 2px dotted #313131;
  border-right: 2px dotted #313131;
  transition: border-color .15s;
}

code .line:hover {
  background: #424242;
}

body.dark-mode code .line:hover {
  background: #212121;
}

code .line:hover:before {
  border-color: #4A90E2;
}

.hljs {
  background: #212121;
  color: #e0e0e0;
  padding: 16px;
  border-radius: 3px;
  font-size: 12px;
}

body.dark-mode .hljs {
  background: #000000;
}

.hljs-keyword {
  color: #4A90E2;
  font-weight: normal;
}

.hljs-built_in {
  color: #B765FF;
}

.hljs-subst {
  color: #B8E986;
}

.hljs-number {
  color: #F5A623;
}

.hljs-literal {
  color: #F5A623;
}

.hljs-title {
  color: #ffffff;
  font-weight: normal;
}

.hljs-attr {
  color: #B765FF;
}

.hljs-string {
  color: #B8E986;
}

